CHANGES IN FLTK 1.1.0rc1

	- Fixed a bug in the MacOS font enumeration code.
	- Now show a "locked" icon next to static/private
	  elements in FLUID, and "unlocked" icon next to
	  global/public elements.
	- Implemented Fl_Menu_Item image labels using older
	  1.0.x labeltype method.
	- Updated the PNG library check to support both png.h
	  and libpng/png.h.
	- Fixed a recursion bug in tooltips that was causing
	  random crashes.
	- fl_file_chooser() could cause a segfault when passed a
	  NULL filename parameter in some situations.
	- Added a "-g" option to fltk-config to support quick
	  compiling with debugging enabled.
	- Fixed redraw problem with Fl_Input and anti-aliased
	  text.
	- Added threading support for MacOS X and Darwin.
	- The filesystem list in the file chooser now works under
	  MacOS X and Darwin.
	- The fl_msg structure now contains all data passed to
	  the WndProc function under WIN32.
	- Fixed some window focus/positioning problems under
	  MacOS X.
	- Added fl_create_alphamask() function to create an alpha
	  mask from 8-bit data; currently this always generates a
	  1-bit screen-door bitmask, however in the future it will
	  allow us to generate N-bit masks as needed by various
	  OS's.
	- Fl_File_Browser::load() didn't properly show drives
	  when compiled in Cygwin mode.
	- Now pass correctly pass keyboard and mouse events to
	  widget under tooltip as needed...
	- Added new Fl::dnd_text_ops() methods to enable/disable
	  drag-and-drop text operations.
	- Fl_Input now supports clicking inside a selection to
	  set the new text position when drag-and-drop is
	  enabled.
	- Added support of X resources for scheme, dnd_text_ops,
	  tooltips, and visible_focus...
	- Fixed some case problems in includes for the MacOS X
	  code.
	- Fl_Widget::handle() returned 1 for FL_ENTER and
	  FL_LEAVE events, which caused some compatibility
	  problems with 1.0 code.
	- Fl_Box::handle() now returns 1 for FL_ENTER and